GPGPU particles loaded

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>v43-tier3-team-29</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">      
+    </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
