--- a/index.html
+++ b/index.html
@@ -2,13 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>v43-tier3-team-29</title>
+    <!-- General tags -->
+    <title>Voyage #43</title>
+    <meta
+      name="description"
+      content="The app was built during the wonderful Voyage #43 organized by Jim
+        Medlock and his awesome Chingu team."
+    />
+    <meta name="keywords" content="Portfolio, 3D website" />
+    <meta name="author" content="Danney, Sean, Jane, Szymon, Zoran" />
+    <!-- OpenGraph tags -->
+    <meta property="og:url" content="https://portfolio3js.netlify.app/" />
+    <meta property="og:title" content="Voyage #43" />
+    <meta
+      property="og:description"
+      content="The app was built during the wonderful Voyage #43 organized by Jim
+        Medlock and his awesome Chingu team."
+    />
+    <meta
+      property="og:image"
+      content="https://portfolio3js.netlify.app/main.png"
+    />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:creator" content="" /> -->
+    <meta name="twitter:title" content="Voyage $43" />
+    <meta
+      name="twitter:description"
+      content="The app was built during the wonderful Voyage #43 organized by Jim
+        Medlock and his awesome Chingu team."
+    />
+    <meta
+      name="twitter:image"
+      content="https://portfolio3js.netlify.app/main.png"
+    />
   </head>
   <body>
-    <div id="root">      
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
