Change seo image format

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://portfolio3js.netlify.app/main.png"
+      content="https://portfolio3js.netlify.app/main.jpg"
     />
     <meta property="og:type" content="website" />
     <!-- Twitter Card tags -->
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://portfolio3js.netlify.app/main.png"
+      content="https://portfolio3js.netlify.app/main.jpg"
     />
   </head>
   <body>
