Update SEO description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Voyage #43</title>
     <meta
       name="description"
-      content="The app was built during the wonderful Voyage #43 organized by Jim
+      content="We're a team of developers passionate about software development and the work we create together. Our 3D portfolio is built with React and Three.js during the wonderful Voyage #43 organized by Jim
         Medlock and his awesome Chingu team."
     />
     <meta name="keywords" content="Portfolio, 3D website" />
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Voyage #43" />
     <meta
       property="og:description"
-      content="The app was built during the wonderful Voyage #43 organized by Jim
+      content="We're a team of developers passionate about software development and the work we create together. Our 3D portfolio is built with React and Three.js during the wonderful Voyage #43 organized by Jim
         Medlock and his awesome Chingu team."
     />
     <meta
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="Voyage $43" />
     <meta
       name="twitter:description"
-      content="The app was built during the wonderful Voyage #43 organized by Jim
+      content="We're a team of developers passionate about software development and the work we create together. Our 3D portfolio is built with React and Three.js during the wonderful Voyage #43 organized by Jim
         Medlock and his awesome Chingu team."
     />
     <meta
