added board context

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       name="twitter:image"
       content="https://portfolio3js.netlify.app/main.jpg"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
